add unit tests and enable unit tests